Set border-top of dropdown-menu to none. Fixes double border look.
FEE-691

--- a/src/global-styles/components/_dropdown.scss
+++ b/src/global-styles/components/_dropdown.scss
@@ -71,6 +71,7 @@ $dropdown-button-active-hover-border-color: #999;
 
   & div.dropdown-menu {
     width: calc(100% - 1px);
+    border-top: none;
 
     & div.fixed-header {
       padding: 4px 5px;
